--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="imagem/favicon.png" type="image/x-icon">
 
     
-    <link rel="stylesheet" href="/style/sobre.css">
+    <link rel="stylesheet" href="style/sobre.css">
     <title>Sobre nós</title>
 </head>
 <body>
